--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <!-- Use <div> to create at least two sections of content on the page. -->
     <div id="header">
-        <h1>[Your Name]</h1>
-        <p class="contact-info">Email: [juangranizochavez@hotmail.com]</p>
-        <p class="contact-info">Phone: [6613032529]</p>
+        <h1>Juan Granizo</h1>
+        <p class="contact-info">Email: juangranizochavez@hotmail.com</p>
+        <p class="contact-info">Phone: 6613032529</p>
         <!-- Include an image (something safe for work). -->
         <img src="https://imgs.search.brave.com/YzLUhRRWegAJifBEczSR6LwtWIykXsfhAUhWw4Qzli0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/bGlmZXdpcmUuY29t/L3RobWIvbFdsQ1FE/a1prdmJXeEtoa0pa/NnlqT0pfSjRrPS8x/NTAweDAvZmlsdGVy/czpub191cHNjYWxl/KCk6bWF4X2J5dGVz/KDE1MDAwMCk6c3Ry/aXBfaWNjKCkvU2Ny/ZWVuU2hvdDIwMjAt/MDQtMjBhdDEwLjAz/LjIzQU0tZDU1Mzg3/YzQ0MjI5NDBiZTlh/NGYzNTMxODJiZDc3/OGMuanBn" alt="Profile Picture" width="150">
     </div>
@@ -50,10 +50,10 @@
 
     <!-- Use <a> to link to another website. -->
     <!-- Link to your Google profile or any relevant page. -->
-    <a href="google.com">Google</a>
+    <a href="https://www.google.com">Google</a>
     <div class="section">
         <h2>Contact & Links</h2>
-        <p>Find me on <a href="www.linkedin.com/in/juangranizo" target="_blank">Google</a>.</p>
+        <p>Find me on <a href="https://www.linkedin.com/in/juangranizo" target="_blank">LinkedIn</a>.</p>
     </div>
 </body>
 </html>
